# autods-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.dashboard  IMPLEMENTATION_LOG.md  Makefile  PROJECT_STRUCTURE.md  README.md  auth.py  db.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.streamlit/: config.toml
Landing/: .gitignore  CLAUDE.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md
agents/: data_profiler.py  deployment_agent.py  domain_detector.py  eda_agent.py  explainability_agent.py  feature_engineer.py  followup_agent.py  modeling_agent.py  orchestrator.py  report_agent.py
api/: .dockerignore  .env.example  AUDIT.md  Dockerfile  README.md  SIGNATURES.md  config.py  dependencies.py  logging_setup.py  main.py  openapi.json  render.yaml  requirements.txt
chatdl_handoff/: 00_START_HERE.md
configs/: agent_prompts.yaml  default_settings.yaml  domain_configs.yaml  loader.py  logging_config.yaml  tool_registry.yaml
configure_handoff/: 00_START_HERE.md  CLAUDE_CODE_PROMPT.md
core/: constants.py  exceptions.py  graph.py  llm_config.py  memory.py  state.py  user_modes.py
dashboard/: app.py
data_connectors/: base.py  connector_factory.py  multi_source_manager.py  schema_matcher.py  universal_loader.py
docs/: APPLICATION_ARCHITECTURE.md  BUILD_NEXT.md  DEVELOPMENT_PHASES.md  FRONTEND_OVERHAUL_SUMMARY.md  PRD.md  SYSTEM_DESIGN.md  TECH_DOC.md  api_reference.md  architecture-visual.html  architecture.md  deployment_guide.md  developer_guide.md  domain_guide.md  tool_registry_reference.md  user_guide.md
domains/: base_domain.py  domain_registry.py  ecommerce.py  finance.py  generic.py  healthcare.py  hr.py  manufacturing.py  marketing.py
eda_handoff/: 00_START_HERE.md  CLAUDE_CODE_PROMPT.md
(+438 files in other folders)
